CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#Setting the Project
PROJECT(MIRAGE)
SET(CMAKE_MODULE_PATH ${MIRAGE_SOURCE_DIR}/CMake)

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLUT)
FIND_PACKAGE(X11)
IF(X11_FOUND)
      SET(X_LIBS ${X11_X11_LIB})
      SET(X_INC_DIR ${X11_X11_INCLUDE_PATH})
ENDIF(X11_FOUND)

FIND_PACKAGE(GLEW)

ADD_SUBDIRECTORY(Modules/MsgCore)
ADD_SUBDIRECTORY(modules/MsgDB)

ADD_SUBDIRECTORY( Tests )
 
